minor bug fix #me13

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="vivek nimbolkar" content="I am the author of this website">
 
   <title>SWIFT BANK | Privacy and policy</title>
   <meta content="" name="description">
