--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  <meta name="vivek nimbolkar" content="I am the author of this website">
   <title>SWIFT BANK | About us</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
